// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DEBT-006: Snapshot tests snapshot: destructive/default 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-error text-white hover:bg-red-700 rounded-button h-10 px-4 py-2 text-sm gap-2"
>
  destructive
   
  default
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: destructive/lg 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-error text-white hover:bg-red-700 rounded-button h-12 px-6 text-base gap-2.5"
>
  destructive
   
  lg
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: destructive/sm 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-error text-white hover:bg-red-700 rounded-button h-8 px-3 text-xs gap-1.5"
>
  destructive
   
  sm
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: disabled state 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-brand-navy text-white hover:bg-brand-blue-hover rounded-button h-10 px-4 py-2 text-sm gap-2"
  disabled=""
>
  Disabled
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: ghost/default 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-ink-secondary hover:text-ink hover:bg-surface-1 rounded-button h-10 px-4 py-2 text-sm gap-2"
>
  ghost
   
  default
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: ghost/lg 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-ink-secondary hover:text-ink hover:bg-surface-1 rounded-button h-12 px-6 text-base gap-2.5"
>
  ghost
   
  lg
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: ghost/sm 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-ink-secondary hover:text-ink hover:bg-surface-1 rounded-button h-8 px-3 text-xs gap-1.5"
>
  ghost
   
  sm
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: icon size 1`] = `
<button
  aria-label="Close"
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-brand-navy text-white hover:bg-brand-blue-hover rounded-button h-10 w-10"
>
  X
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: link/default 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-brand-blue underline-offset-4 hover:underline h-10 px-4 py-2 text-sm gap-2"
>
  link
   
  default
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: link/lg 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-brand-blue underline-offset-4 hover:underline h-12 px-6 text-base gap-2.5"
>
  link
   
  lg
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: link/sm 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-brand-blue underline-offset-4 hover:underline h-8 px-3 text-xs gap-1.5"
>
  link
   
  sm
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: loading state 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-brand-navy text-white hover:bg-brand-blue-hover rounded-button h-10 px-4 py-2 text-sm gap-2"
  disabled=""
>
  <svg
    aria-hidden="true"
    class="animate-spin h-4 w-4 shrink-0"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
    <path
      class="opacity-75"
      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
      fill="currentColor"
    />
  </svg>
  Loading...
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: outline/default 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-DEFAULT bg-transparent text-ink hover:bg-surface-1 rounded-button h-10 px-4 py-2 text-sm gap-2"
>
  outline
   
  default
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: outline/lg 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-DEFAULT bg-transparent text-ink hover:bg-surface-1 rounded-button h-12 px-6 text-base gap-2.5"
>
  outline
   
  lg
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: outline/sm 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-DEFAULT bg-transparent text-ink hover:bg-surface-1 rounded-button h-8 px-3 text-xs gap-1.5"
>
  outline
   
  sm
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: primary/default 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-brand-navy text-white hover:bg-brand-blue-hover rounded-button h-10 px-4 py-2 text-sm gap-2"
>
  primary
   
  default
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: primary/lg 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-brand-navy text-white hover:bg-brand-blue-hover rounded-button h-12 px-6 text-base gap-2.5"
>
  primary
   
  lg
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: primary/sm 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-brand-navy text-white hover:bg-brand-blue-hover rounded-button h-8 px-3 text-xs gap-1.5"
>
  primary
   
  sm
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: secondary/default 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-surface-1 text-ink-secondary hover:text-ink hover:bg-surface-2 rounded-button border border-DEFAULT h-10 px-4 py-2 text-sm gap-2"
>
  secondary
   
  default
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: secondary/lg 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-surface-1 text-ink-secondary hover:text-ink hover:bg-surface-2 rounded-button border border-DEFAULT h-12 px-6 text-base gap-2.5"
>
  secondary
   
  lg
</button>
`;

exports[`DEBT-006: Snapshot tests snapshot: secondary/sm 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-blue focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-surface-1 text-ink-secondary hover:text-ink hover:bg-surface-2 rounded-button border border-DEFAULT h-8 px-3 text-xs gap-1.5"
>
  secondary
   
  sm
</button>
`;
